Fixed heading and print link overlap in case the heading is long

--- a/public/css/dbjr.css
+++ b/public/css/dbjr.css
@@ -714,6 +714,10 @@ body {
   width: 720px;
 }
 
+.container > .main .main-content.span9 h1 {
+  margin-right: 5em;
+}
+
 .container > .main .print {
   position: absolute;
   top: 3em;
