--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -119,6 +119,10 @@ body {
 
 		&.span9 {
 			width: 720px;
+
+			h1 {
+				margin-right: 5em; // make place for print link
+			}
 		}
 	}
 
